--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
+  "homepage": "https://qrreader.iartz.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -b main -d build"
   },
   "eslintConfig": {
     "extends": [
