--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
-  "homepage": "https://qrreader.iartz.io",
+  "homepage": "https://qr.iartz.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
